Tmux, vim updates, qtile and fish configs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,16 @@
 set -g default-terminal "screen-256color"
+set -g base-index 1
+set -g pane-base-index 1
+
+set -g prefix `
+bind a send-prefix
+set -sg escape-time 1
+bind | split-window -h
+bind - split-window -v
+
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n 'c-h' if-shell "$is_vim" "send-keys c-h" "select-pane -L"
+bind -n 'c-j' if-shell "$is_vim" "send-keys c-j" "select-pane -D"
+bind -n 'c-k' if-shell "$is_vim" "send-keys c-k" "select-pane -U"
+bind -n 'c-l' if-shell "$is_vim" "send-keys c-l" "select-pane -R"
+
