Switched to stow for dotfile management

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,6 +8,8 @@ set -sg escape-time 1
 bind | split-window -h
 bind - split-window -v
 
+set-environment -g FZF_TMUX 1
+
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n 'c-h' if-shell "$is_vim" "send-keys c-h" "select-pane -L"
 bind -n 'c-j' if-shell "$is_vim" "send-keys c-j" "select-pane -D"
