Added tpm, prefix-highlight and tmux-logging for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,3 +15,16 @@ bind -n 'c-h' if-shell "$is_vim" "send-keys c-h" "select-pane -L"
 bind -n 'c-j' if-shell "$is_vim" "send-keys c-j" "select-pane -D"
 bind -n 'c-k' if-shell "$is_vim" "send-keys c-k" "select-pane -U"
 bind -n 'c-l' if-shell "$is_vim" "send-keys c-l" "select-pane -R"
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-logging'
+
+# Tmux highlight
+set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
+set -g @prefix_highlight_fg 'white' # default is 'colour231'
+set -g @prefix_highlight_bg 'black'  # default is 'colour04'
+
+# Keep as last line
+run '~/.tmux/plugins/tpm/tpm'
