Tmux theme edited to match light theme

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,5 +26,37 @@ set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
 set -g @prefix_highlight_fg 'white' # default is 'colour231'
 set -g @prefix_highlight_bg 'black'  # default is 'colour04'
 
+bind r source-file ~/.tmux.conf
+
+################################################################################
+# Theme
+################################################################################
+
+# Panes
+set -g pane-border-fg default
+set -g pane-active-border-fg green
+
+# Statusbar
+## Messaging
+set -g message-fg black
+set -g message-bg cyan
+set -g message-command-fg black
+set -g message-command-bg red
+
+## Window mode
+setw -g mode-bg cyan
+setw -g mode-fg white
+
+## Statusbar
+set -g status-interval 2
+setw -g window-status-format "#[fg=colour3] •#[fg=colour8] #I:#W"
+setw -g window-status-current-format "#{?window_zoomed_flag,#[fg=red],#[fg=colour2]} •#[fg=colour7] #W "
+setw -g window-status-current-attr dim
+set -g status-position bottom
+set -g status-justify centre
+set -g status-left "  #[fg=colour3]• #[fg=colour2]• #[fg=colour4]• #[fg=black]"
+set -g status-right "#[fg=white] %H:%M %d/%m #[fg=colour4] •#[fg=white] #S  "
+
+
 # Keep as last line
 run '~/.tmux/plugins/tpm/tpm'
