Tweaked tmux theme

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,29 +33,30 @@ bind r source-file ~/.tmux.conf
 ################################################################################
 
 # Panes
-set -g pane-border-fg default
-set -g pane-active-border-fg green
+set -g pane-border-fg colour250
+set -g pane-active-border-fg colour242
 
 # Statusbar
 ## Messaging
-set -g message-fg black
-set -g message-bg cyan
-set -g message-command-fg black
-set -g message-command-bg red
+set -g message-fg colour235
+set -g message-bg colour244
+set -g message-command-fg colour254
+set -g message-command-bg colour124
 
 ## Window mode
-setw -g mode-bg cyan
-setw -g mode-fg white
+setw -g mode-bg colour244
+setw -g mode-fg colour254
 
 ## Statusbar
 set -g status-interval 2
-setw -g window-status-format "#[fg=colour3] •#[fg=colour8] #I:#W"
-setw -g window-status-current-format "#{?window_zoomed_flag,#[fg=red],#[fg=colour2]} •#[fg=colour7] #W "
+set -g status-bg colour247
+setw -g window-status-format "#[fg=colour172] •#[fg=colour8] #I:#W"
+setw -g window-status-current-format "#{?window_zoomed_flag,#[fg=colour124],#[fg=colour65]} •#[fg=colour254] #W "
 setw -g window-status-current-attr dim
 set -g status-position bottom
 set -g status-justify centre
-set -g status-left "  #[fg=colour3]• #[fg=colour2]• #[fg=colour4]• #[fg=black]"
-set -g status-right "#[fg=white] %H:%M %d/%m #[fg=colour4] •#[fg=white] #S  "
+set -g status-left "#[bg=colour244]  #[fg=colour172]• #[fg=colour70]• #[fg=colour75]• #[fg=black] #[bg=colour247, fg=colour244]"
+set -g status-right "#[bg=colour247, fg=colour244]#[bg=colour244] #[fg=colour254] %H:%M %d/%m #[fg=colour75] •#[fg=colour254] #S  "
 
 
 # Keep as last line
