--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,6 +8,8 @@ set -sg escape-time 1
 bind | split-window -h
 bind - split-window -v
 
+set -g history-limit 100000
+
 set-environment -g FZF_TMUX 1
 
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
