--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -42,7 +42,7 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec "rofi -show run"
+bindsym $mod+Shift+d exec "rofi -show run"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -96,7 +96,7 @@ bindsym $mod+minus scratchpad show
 set $workspace1 "1: Web"
 set $workspace2 "2: Work"
 set $workspace3 "3: Web-2"
-set $workspace4 "4: Slack"
+set $workspace4 "4: Franz"
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
@@ -170,6 +170,8 @@ floating_minimum_size 75 x 50
 exec_always --no-startup-id feh --bg-fill ~/Downloads/snowmountain.jpg
 exec_always --no-startup-id ~/launchpolybar.sh
 exec --no-startup-id compton -b
+exec --no-startup-id albert
+exec --no-startup-id dunst -config ~/.config/dunst/dunstrc
 
 # Disable mouse warping (mouse suddenly jumping to different window)
 mouse_warping none
