--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ nvim/.config/nvim/nvimplugins
 fish/.config/fish/functions/fzf_key_bindings.fish
 node_modules/
 tmux/.tmux/plugins/*
+tmux/.tmux/resurrect
 newsbeuter/.newsbeuter/cache.db
 newsbeuter/.newsbeuter/cache.db.lock
 newsbeuter/.newsbeuter/history.*
