--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,6 +22,8 @@ bind -n 'c-l' if-shell "$is_vim" "send-keys c-l" "select-pane -R"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-logging'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Tmux highlight
 set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
@@ -60,6 +62,10 @@ set -g status-justify centre
 set -g status-left "#[bg=colour244]  #[fg=colour172]• #[fg=colour70]• #[fg=colour75]• #[fg=black] #[bg=colour247, fg=colour244]"
 set -g status-right "#[bg=colour247, fg=colour244]#[bg=colour244] #[fg=colour254] %H:%M %d/%m #[fg=colour75] •#[fg=colour254] #S  "
 
+# Tmux resurrect
+set -g @resurrect-strategy-nvim 'session'
+set -g @continuum-restore 'on'
 
 # Keep as last line
 run '~/.tmux/plugins/tpm/tpm'
+
