Remove tmux errors and change send-prefix key

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,7 +3,7 @@ set -g base-index 1
 set -g pane-base-index 1
 
 set -g prefix `
-bind a send-prefix
+bind ` send-prefix
 set -sg escape-time 1
 bind | split-window -h
 bind - split-window -v
@@ -36,27 +36,11 @@ bind r source-file ~/.tmux.conf
 # Theme
 ################################################################################
 
-# Panes
-set -g pane-border-fg colour250
-set -g pane-active-border-fg colour242
-
 # Statusbar
-## Messaging
-set -g message-fg colour235
-set -g message-bg colour244
-set -g message-command-fg colour254
-set -g message-command-bg colour124
-
-## Window mode
-setw -g mode-bg colour244
-setw -g mode-fg colour254
-
-## Statusbar
 set -g status-interval 2
 set -g status-bg colour247
 setw -g window-status-format "#[fg=colour172] •#[fg=colour8] #I:#W"
 setw -g window-status-current-format "#{?window_zoomed_flag,#[fg=colour124],#[fg=colour65]} •#[fg=colour254] #W "
-setw -g window-status-current-attr dim
 set -g status-position bottom
 set -g status-justify centre
 set -g status-left "#[bg=colour244]  #[fg=colour172]• #[fg=colour70]• #[fg=colour75]• #[fg=black] #[bg=colour247, fg=colour244]"
