--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -76,7 +76,7 @@ font:
   use_thin_strokes: true
 
 # Should display the render timer
-render_timer: false
+debug.render_timer: false
 
 # Colors (Tomorrow Night Bright)
 colors:
@@ -258,7 +258,8 @@ key_bindings:
 # - PasteSelection
 # - Copy (TODO)
 mouse_bindings:
-  - { mouse: Middle, action: PasteSelection }
+  - { mouse: Middle, action: Paste }
+  - { mouse: Right, action: Copy }
 
 mouse:
   double_click: { threshold: 300 }
