--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -19,44 +19,8 @@ secondary = #e60053
 alert = #bd2c40
 
 
-[bar/native]
-monitor = eDP-1
-width = 100%
-height = 40
-;offset-x = 1%
-;offset-y = 1%
-radius = 6.0
-fixed-center = false
-
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-line-size = 3
-line-color = #f00
-
-border-size = 4
-border-color = #00000000
-
-padding-left = 0
-padding-right = 2
-
-module-margin-left = 1
-module-margin-right = 2
-
-font-0 = fixed:pixelsize=20;1
-font-1 = unifont:fontformat=truetype:size=18:antialias=false;0
-font-2 = siji:pixelsize=20;1
-font-3 = FontAwesome:pixelsize=20;1
-
-modules-left = i3 mpd
-modules-center =
-modules-right = filesystem xbacklight volume xkeyboard memory cpu wlan eth battery temperature date powermenu
-
-tray-position = right
-tray-padding = 2
-
-[bar/work]
-monitor = DP-1
+[bar/main]
+monitor = ${env:MONITOR:}
 width = 100%
 height = 40
 ;offset-x = 1%
