Change to backtick for window changes

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,10 +13,10 @@ set -g history-limit 100000
 set-environment -g FZF_TMUX 1
 
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n 'c-h' if-shell "$is_vim" "send-keys c-h" "select-pane -L"
-bind -n 'c-j' if-shell "$is_vim" "send-keys c-j" "select-pane -D"
-bind -n 'c-k' if-shell "$is_vim" "send-keys c-k" "select-pane -U"
-bind -n 'c-l' if-shell "$is_vim" "send-keys c-l" "select-pane -R"
+bind 'h' if-shell "$is_vim" "send-keys c-w h" "select-pane -L"
+bind 'j' if-shell "$is_vim" "send-keys c-w j" "select-pane -D"
+bind 'k' if-shell "$is_vim" "send-keys c-w k" "select-pane -U"
+bind 'l' if-shell "$is_vim" "send-keys c-w l" "select-pane -R"
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
