Remove duplicate keybindings in alacritty

--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -24,12 +24,12 @@ window:
 
 # The FreeType rasterizer needs to know the device DPI for best results
 # (changes require restart)
-dpi:
-  x: 48.0
-  y: 48.0
+# dpi:
+#   x: 48.0
+#   y: 48.0
 
 # Display tabs using this many cells (changes require restart)
-tabspaces: 4
+# tabspaces: 4
 
 # When true, bold text is drawn using the bright variant of colors.
 draw_bold_text_with_bright_colors: true
@@ -38,6 +38,7 @@ draw_bold_text_with_bright_colors: true
 font:
   # The normal (roman) font face to use.
   normal:
+    # family: 'MesloLGM Nerd Font' # should be "Menlo" or something on macOS.
     family: 'MesloLGM Nerd Font' # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     style: Regular
@@ -55,7 +56,7 @@ font:
     # style: Italic
 
   # Point size of the font
-  size: 10.0
+  size: 12.0
 
   # Offset is the extra space around each character. offset.y can be thought of
   # as modifying the linespacing, and offset.x as modifying the letter spacing.
@@ -188,59 +189,59 @@ background_opacity: 1.0
 # Want to add a binding (e.g. "PageUp") but are unsure what the X sequence
 # (e.g. "\x1b[5~") is? Open another terminal (like xterm) without tmux,
 # then run `showkey -a` to get the sequence associated to a key combination.
-key_bindings:
-  - { key: V,        mods: Control|Shift,    action: Paste               }
-  - { key: C,        mods: Control|Shift,    action: Copy                }
-  - { key: Q,        mods: Command, action: Quit                         }
-  - { key: W,        mods: Command, action: Quit                         }
-  - { key: Insert,   mods: Shift,   action: PasteSelection               }
-  - { key: Home,                    chars: "\x1bOH",   mode: AppCursor   }
-  - { key: Home,                    chars: "\x1b[H",   mode: ~AppCursor  }
-  - { key: End,                     chars: "\x1bOF",   mode: AppCursor   }
-  - { key: End,                     chars: "\x1b[F",   mode: ~AppCursor  }
-  - { key: PageUp,   mods: Shift,   chars: "\x1b[5;2~"                   }
-  - { key: PageUp,   mods: Control, chars: "\x1b[5;5~"                   }
-  - { key: PageUp,                  chars: "\x1b[5~"                     }
-  - { key: PageDown, mods: Shift,   chars: "\x1b[6;2~"                   }
-  - { key: PageDown, mods: Control, chars: "\x1b[6;5~"                   }
-  - { key: PageDown,                chars: "\x1b[6~"                     }
-  - { key: Left,     mods: Shift,   chars: "\x1b[1;2D"                   }
-  - { key: Left,     mods: Control, chars: "\x1b[1;5D"                   }
-  - { key: Left,     mods: Alt,     chars: "\x1b[1;3D"                   }
-  - { key: Left,                    chars: "\x1b[D",   mode: ~AppCursor  }
-  - { key: Left,                    chars: "\x1bOD",   mode: AppCursor   }
-  - { key: Right,    mods: Shift,   chars: "\x1b[1;2C"                   }
-  - { key: Right,    mods: Control, chars: "\x1b[1;5C"                   }
-  - { key: Right,    mods: Alt,     chars: "\x1b[1;3C"                   }
-  - { key: Right,                   chars: "\x1b[C",   mode: ~AppCursor  }
-  - { key: Right,                   chars: "\x1bOC",   mode: AppCursor   }
-  - { key: Up,       mods: Shift,   chars: "\x1b[1;2A"                   }
-  - { key: Up,       mods: Control, chars: "\x1b[1;5A"                   }
-  - { key: Up,       mods: Alt,     chars: "\x1b[1;3A"                   }
-  - { key: Up,                      chars: "\x1b[A",   mode: ~AppCursor  }
-  - { key: Up,                      chars: "\x1bOA",   mode: AppCursor   }
-  - { key: Down,     mods: Shift,   chars: "\x1b[1;2B"                   }
-  - { key: Down,     mods: Control, chars: "\x1b[1;5B"                   }
-  - { key: Down,     mods: Alt,     chars: "\x1b[1;3B"                   }
-  - { key: Down,                    chars: "\x1b[B",   mode: ~AppCursor  }
-  - { key: Down,                    chars: "\x1bOB",   mode: AppCursor   }
-  - { key: Tab,      mods: Shift,   chars: "\x1b[Z"                      }
-  - { key: F1,                      chars: "\x1bOP"                      }
-  - { key: F2,                      chars: "\x1bOQ"                      }
-  - { key: F3,                      chars: "\x1bOR"                      }
-  - { key: F4,                      chars: "\x1bOS"                      }
-  - { key: F5,                      chars: "\x1b[15~"                    }
-  - { key: F6,                      chars: "\x1b[17~"                    }
-  - { key: F7,                      chars: "\x1b[18~"                    }
-  - { key: F8,                      chars: "\x1b[19~"                    }
-  - { key: F9,                      chars: "\x1b[20~"                    }
-  - { key: F10,                     chars: "\x1b[21~"                    }
-  - { key: F11,                     chars: "\x1b[23~"                    }
-  - { key: F12,                     chars: "\x1b[24~"                    }
-  - { key: Back,                    chars: "\x7f"                        }
-  - { key: Back,     mods: Alt,     chars: "\x1b\x7f"                    }
-  - { key: Insert,                  chars: "\x1b[2~"                     }
-  - { key: Delete,                  chars: "\x1b[3~"                     }
+# key_bindings:
+#   - { key: V,        mods: Control|Shift,    action: Paste               }
+#   - { key: C,        mods: Control|Shift,    action: Copy                }
+#   - { key: Q,        mods: Command, action: Quit                         }
+#   - { key: W,        mods: Command, action: Quit                         }
+#   - { key: Insert,   mods: Shift,   action: PasteSelection               }
+#   - { key: Home,                    chars: "\x1bOH",   mode: AppCursor   }
+#   - { key: Home,                    chars: "\x1b[H",   mode: ~AppCursor  }
+#   - { key: End,                     chars: "\x1bOF",   mode: AppCursor   }
+#   - { key: End,                     chars: "\x1b[F",   mode: ~AppCursor  }
+#   - { key: PageUp,   mods: Shift,   chars: "\x1b[5;2~"                   }
+#   - { key: PageUp,   mods: Control, chars: "\x1b[5;5~"                   }
+#   - { key: PageUp,                  chars: "\x1b[5~"                     }
+#   - { key: PageDown, mods: Shift,   chars: "\x1b[6;2~"                   }
+#   - { key: PageDown, mods: Control, chars: "\x1b[6;5~"                   }
+#   - { key: PageDown,                chars: "\x1b[6~"                     }
+#   - { key: Left,     mods: Shift,   chars: "\x1b[1;2D"                   }
+#   - { key: Left,     mods: Control, chars: "\x1b[1;5D"                   }
+#   - { key: Left,     mods: Alt,     chars: "\x1b[1;3D"                   }
+#   - { key: Left,                    chars: "\x1b[D",   mode: ~AppCursor  }
+#   - { key: Left,                    chars: "\x1bOD",   mode: AppCursor   }
+#   - { key: Right,    mods: Shift,   chars: "\x1b[1;2C"                   }
+#   - { key: Right,    mods: Control, chars: "\x1b[1;5C"                   }
+#   - { key: Right,    mods: Alt,     chars: "\x1b[1;3C"                   }
+#   - { key: Right,                   chars: "\x1b[C",   mode: ~AppCursor  }
+#   - { key: Right,                   chars: "\x1bOC",   mode: AppCursor   }
+#   - { key: Up,       mods: Shift,   chars: "\x1b[1;2A"                   }
+#   - { key: Up,       mods: Control, chars: "\x1b[1;5A"                   }
+#   - { key: Up,       mods: Alt,     chars: "\x1b[1;3A"                   }
+#   - { key: Up,                      chars: "\x1b[A",   mode: ~AppCursor  }
+#   - { key: Up,                      chars: "\x1bOA",   mode: AppCursor   }
+#   - { key: Down,     mods: Shift,   chars: "\x1b[1;2B"                   }
+#   - { key: Down,     mods: Control, chars: "\x1b[1;5B"                   }
+#   - { key: Down,     mods: Alt,     chars: "\x1b[1;3B"                   }
+#   - { key: Down,                    chars: "\x1b[B",   mode: ~AppCursor  }
+#   - { key: Down,                    chars: "\x1bOB",   mode: AppCursor   }
+#   - { key: Tab,      mods: Shift,   chars: "\x1b[Z"                      }
+#   - { key: F1,                      chars: "\x1bOP"                      }
+#   - { key: F2,                      chars: "\x1bOQ"                      }
+#   - { key: F3,                      chars: "\x1bOR"                      }
+#   - { key: F4,                      chars: "\x1bOS"                      }
+#   - { key: F5,                      chars: "\x1b[15~"                    }
+#   - { key: F6,                      chars: "\x1b[17~"                    }
+#   - { key: F7,                      chars: "\x1b[18~"                    }
+#   - { key: F8,                      chars: "\x1b[19~"                    }
+#   - { key: F9,                      chars: "\x1b[20~"                    }
+#   - { key: F10,                     chars: "\x1b[21~"                    }
+#   - { key: F11,                     chars: "\x1b[23~"                    }
+#   - { key: F12,                     chars: "\x1b[24~"                    }
+#   - { key: Back,                    chars: "\x7f"                        }
+#   - { key: Back,     mods: Alt,     chars: "\x1b\x7f"                    }
+#   - { key: Insert,                  chars: "\x1b[2~"                     }
+#   - { key: Delete,                  chars: "\x1b[3~"                     }
 
 # Mouse bindings
 #
