--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,8 +22,10 @@ bind 'l' if-shell "$is_vim" "send-keys c-w l" "select-pane -R"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-logging'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'roosta/tmux-fuzzback'
+#set -g @plugin 'tmux-plugins/tmux-resurrect'
+#set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @fuzzback-popup 1
 
 # Tmux highlight
 set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
